# claude-max-proxy-py

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/claude_max_proxy/: __init__.py  __main__.py  cli.py  cli_to_openai.py  openai_to_cli.py  server.py  session_manager.py  subprocess_manager.py  types.py
